unified_tests/packages/exports_duplicate_symbol/expect/build.text.stderr
PACKAGE.copp:1:18: error: duplicate exported symbol 'Token'
  exports { Token, Token }
                   ^
